// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register - medium 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`2. lead one and one - medium 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`3. lead one full width - medium 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`4. lead two no pic and two - medium 1`] = `
<div>
  <div>
    <div>
      <TileX
        tileName="lead1"
      />
      <div />
      <TileY
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileD
        tileName="support1"
      />
      <div />
      <TileZ
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`5. leaders slice - medium 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`6. secondary one and four - medium 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={40}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support3"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support2"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`7. secondary one - medium 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`8. secondary four - medium 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`9. secondary one and columnist - medium 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`10. secondary two and two - medium 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`11. lead one and four slice - medium 1`] = `
<div>
  <div>
    <div>
      <TileAC
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        tileName="support1"
      />
      <div />
      <TileAD
        tileName="support2"
      />
      <div />
      <TileAD
        tileName="support3"
      />
      <div />
      <TileAD
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`12. secondary two no pic and two - medium 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`13. daily universal register - wide 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`14. lead one and one - wide 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`15. lead one full width - wide 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`16. lead two no pic and two - wide 1`] = `
<div>
  <div>
    <div>
      <TileX
        tileName="lead1"
      />
      <div />
      <TileY
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileD
        tileName="support1"
      />
      <div />
      <TileZ
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`17. leaders slice - wide 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`18. secondary one and four - wide 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={40}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support3"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support2"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`19. secondary one - wide 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`20. secondary four - wide 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`21. secondary one and columnist - wide 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`22. secondary two and two - wide 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`23. lead one and four slice - wide 1`] = `
<div>
  <div>
    <div>
      <TileAC
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        tileName="support1"
      />
      <div />
      <TileAD
        tileName="support2"
      />
      <div />
      <TileAD
        tileName="support3"
      />
      <div />
      <TileAD
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`24. secondary two no pic and two - wide 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`25. daily universal register - huge 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div>
      Daily Universal Register
    </div>
    <TileS />
    <div />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
    />
    <TileS />
    <div />
    <Image
      aspectRatio={1}
      uri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
    />
    <TileS />
  </div>
</div>
`;

exports[`26. lead one and one - huge 1`] = `
<div>
  <div>
    <div>
      <TileU
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`27. lead one full width - huge 1`] = `
<div>
  <TileR
    tileName="lead"
  />
</div>
`;

exports[`28. lead two no pic and two - huge 1`] = `
<div>
  <div>
    <div>
      <TileX
        tileName="lead1"
      />
      <div />
      <TileY
        tileName="lead2"
      />
    </div>
    <div />
    <div>
      <TileD
        tileName="support1"
      />
      <div />
      <TileZ
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`29. leaders slice - huge 1`] = `
<div>
  <div>
    <Image
      aspectRatio={5.74}
      uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
    />
    <div>
      <div>
         Leading Articles 
      </div>
    </div>
  </div>
  <div>
    <div>
      <div>
        <TileAG
          tileName="leader2"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader1"
        />
      </div>
      <div />
      <div>
        <TileAG
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`30. secondary one and four - huge 1`] = `
<div>
  <div>
    <div>
      <TheTimesLogo
        height={40}
        width={40}
      />
    </div>
    <div />
    <div>
      <div>
        <div>
          <TileN
            tileName="secondary"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support1"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support3"
          />
        </div>
      </div>
      <div />
      <div>
        <div>
          <TileO
            tileName="support2"
          />
        </div>
        <div />
        <div>
          <TileO
            tileName="support4"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`31. secondary one - huge 1`] = `
<div>
  <TileW
    tileName="secondary"
  />
</div>
`;

exports[`32. secondary four - huge 1`] = `
<div>
  <div>
    <div>
      <TileC
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary2"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary3"
      />
    </div>
    <div />
    <div>
      <TileC
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`33. secondary one and columnist - huge 1`] = `
<div>
  <div>
    <div>
      <TileAA
        tileName="secondary"
      />
    </div>
    <div />
    <div>
      <TileAB
        tileName="columnist"
      />
    </div>
  </div>
</div>
`;

exports[`34. secondary two and two - huge 1`] = `
<div>
  <div>
    <div>
      <div>
        <TileV
          tileName="secondary1"
        />
      </div>
      <div />
      <div>
        <TileV
          tileName="secondary2"
        />
      </div>
    </div>
    <div />
    <div>
      <div>
        <TileG
          tileName="support1"
        />
      </div>
      <div />
      <div>
        <TileG
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`35. lead one and four slice - huge 1`] = `
<div>
  <div>
    <div>
      <TileAC
        tileName="lead"
      />
    </div>
    <div />
    <div>
      <TileAD
        tileName="support1"
      />
      <div />
      <TileAD
        tileName="support2"
      />
      <div />
      <TileAD
        tileName="support3"
      />
      <div />
      <TileAD
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`36. secondary two no pic and two - huge 1`] = `
<div>
  <div>
    <div>
      <TileAE
        tileName="secondary1"
      />
    </div>
    <div />
    <div>
      <TileAE
        tileName="secondary2"
      />
    </div>
  </div>
  <div />
  <div>
    <div>
      <TileG
        tileName="support1"
      />
    </div>
    <div />
    <div>
      <TileG
        tileName="support2"
      />
    </div>
  </div>
</div>
`;
